--- a/src/manifest.json
+++ b/src/manifest.json
@@ -83,7 +83,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wxa2abb91f64032a2b",
+    "appid": "wxb69cdf8d7f3521ec",
     "setting": {
       "urlCheck": false
     },
