--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     ]
   },
   "resolutions": {
-    "bin-wrapper": "npm:bin-wrapper-china"
+    "bin-wrapper": "npm:bin-wrapper-china",
+    "@unocss/core": "^0.58.9"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4010420240430001",
@@ -93,12 +94,13 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4010420240430001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4010420240430001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4010420240430001",
+    "@unocss/core": "^0.58.9",
     "dayjs": "1.11.10",
     "pinia": "2.0.36",
     "pinia-plugin-persistedstate": "3.2.1",
     "qs": "6.5.3",
+    "uview-plus": "^3.2.24",
     "vue": "3.4.26",
-    "wot-design-uni": "^1.2.20",
     "z-paging": "^2.7.10"
   },
   "devDependencies": {
@@ -121,7 +123,9 @@
     "@uni-helper/vite-plugin-uni-manifest": "^0.2.3",
     "@uni-helper/vite-plugin-uni-pages": "0.2.20",
     "@uni-helper/vite-plugin-uni-platform": "^0.0.4",
+    "@unocss/core": "^0.61.0",
     "@unocss/preset-legacy-compat": "^0.59.1",
+    "@unocss/preset-rem-to-px": "^0.61.0",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.16",
@@ -139,7 +143,8 @@
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.9",
     "rollup-plugin-visualizer": "^5.11.0",
-    "sass": "^1.69.5",
+    "sass": "^1.77.1",
+    "sass-loader": "^10.5.2",
     "stylelint": "^16.0.2",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recess-order": "^4.4.0",
@@ -149,7 +154,7 @@
     "stylelint-prettier": "^5.0.0",
     "terser": "^5.26.0",
     "typescript": "^4.9.5",
-    "unocss": "^0.58.0",
+    "unocss": "^0.58.9",
     "unocss-applet": "^0.7.8",
     "unplugin-auto-import": "^0.17.2",
     "vite": "5.2.8",
