--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     },
     "outDir": "dist",
     "lib": ["esnext", "dom"],
-    "types": ["@dcloudio/types", "@types/wechat-miniprogram", "wot-design-uni/global.d.ts"]
+    "types": ["@dcloudio/types", "@types/wechat-miniprogram", "uview-plus/types"]
   },
   "vueCompilerOptions": {
     "target": 3,
